textkit working hard

--- a/FashionNewsFeed/Podfile
+++ b/FashionNewsFeed/Podfile
@@ -4,6 +4,7 @@ platform :ios, "8.0"
 target 'FashionNewsFeed' do
 pod 'AFNetworking', '~> 2.5.0'
 pod 'DateTools'
+pod 'HTMLReader'
 
 
 end
@@ -11,6 +12,7 @@ end
 target 'FashionNewsFeedTests' do
 pod 'AFNetworking', '~> 2.5.0'
 pod 'DateTools'
+pod 'HTMLReader'
 end
 
 
