--- a/FashionNewsFeed/Podfile
+++ b/FashionNewsFeed/Podfile
@@ -5,7 +5,7 @@ target 'FashionNewsFeed' do
 pod 'AFNetworking', '~> 2.5.0'
 pod 'DateTools'
 pod 'HTMLReader'
-
+pod "VK-ios-sdk"
 
 end
 
@@ -13,6 +13,7 @@ target 'FashionNewsFeedTests' do
 pod 'AFNetworking', '~> 2.5.0'
 pod 'DateTools'
 pod 'HTMLReader'
+pod "VK-ios-sdk"
 end
 
 
