--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,16 @@ DerivedData
 #Pods/
 
 FashionNewsFeed/FashionNewsFeed.xcodeproj/project.xcworkspace/xcuserdata/antondosov.xcuserdatad/UserInterfaceState.xcuserstate
+FashionNewsFeed/.idea/.name
+FashionNewsFeed/.idea/encodings.xml
+FashionNewsFeed/.idea/FashionNewsFeed.iml
+FashionNewsFeed/.idea/misc.xml
+FashionNewsFeed/.idea/modules.xml
+FashionNewsFeed/.idea/vcs.xml
+FashionNewsFeed/.idea/workspace.xml
+FashionNewsFeed/.idea/xcode.xml
+FashionNewsFeed/.idea/dictionaries/anch.xml
+FashionNewsFeed/.idea/inspectionProfiles/profiles_settings.xml
+FashionNewsFeed/.idea/inspectionProfiles/Project_Default.xml
+FashionNewsFeed/.idea/runConfigurations/Pods_FashionNewsFeed_AFNetworking.xml
+FashionNewsFeed/.idea/scopes/scope_settings.xml
