try to make async coredata fetch

--- a/FashionNewsFeed/FashionNewsFeed/Info.plist
+++ b/FashionNewsFeed/FashionNewsFeed/Info.plist
@@ -26,6 +26,8 @@
 	<array>
 		<string></string>
 		<string>Mark Simonson - Proxima Nova Regular Italic.otf</string>
+		<string></string>
+		<string>Mark Simonson - Proxima Nova Semibold Italic.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
