--- a/FashionNewsFeed/FashionNewsFeed/Info.plist
+++ b/FashionNewsFeed/FashionNewsFeed/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>by.FC.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.fcg.ioscourse.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
